# mcp-forger

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  clear_db.py  clear_test_runs.py  config.py  docker-compose.yml  fix_status.py  main.py  pyproject.toml  requirements.txt  trigger_tests.py  user_manual.md
.claude-plugin/: marketplace.json
agent/: chat.py  memory.py
api/routes/: chat.py  config_routes.py  generate.py  logs.py  projects.py  snapshots.py  tests.py
core/: logger.py  notifier.py
core/analyzer/: __init__.py  ast_analyzer.py  endpoint_prober.py  github_fetcher.py  openapi.py
core/generator/: engine.py  validator.py
core/generator/templates/go/: server.go.j2
core/generator/templates/nodejs/: package.json.j2  server.js.j2
core/generator/templates/python_fastmcp/: .env.j2  README.md.j2  configure_claude.ps1.j2  (+3 more)
core/llm/: local_provider.py
core/tester/: generator.py  runner.py
core/versioner/: snapshot.py
dashboard/static/css/: custom.css
dashboard/static/js/: app.js
dashboard/templates/: base.html  config.html  index.html  new_project.html  project.html
dashboard/templates/partials/: chat_messages.html  project_list.html  sidebar_projects.html  snapshot_files.html  snapshot_list.html  test_runs.html
db/: __init__.py  database.py  models.py
forge_cli/: __init__.py  main.py
mcp_server/: server.py
mnt/: .gitkeep
plugins/: claude_desktop_config.json  claude_desktop_config_sse.json  codex-plugin.yaml
plugins/mcp-forge/: plugin.yaml
scripts/: install_claude_plugin.ps1  install_claude_plugin.sh
