[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-forger"
version = "1.0.4"
description = "Convert any application into an MCP server — with AI assistance. CLI + Claude Desktop plugin."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "MCP Forge" }]
keywords = ["mcp", "ai", "llm", "claude", "api", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
forge = "forge_cli.main:app"

[project.optional-dependencies]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "fastmcp>=2.0.0",
    "mcp[cli]>=1.0.0",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.2.0",
    "jinja2>=3.1.3",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/coderXcode/mcp-forge"
Documentation = "https://github.com/coderXcode/mcp-forge/blob/main/user_manual.md"

[tool.hatch.build.targets.wheel]
packages = ["forge_cli"]

[tool.hatch.build.targets.sdist]
exclude = [
    "venv-model-server/",
    "cache/",
    "generated/",
    "mnt/",
    "data/",
    "logs/",
    ".env",
]
